// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsList Component - Snapshot Tests > displays all tags 1`] = `
<div
>

  <div
    class="flex flex-wrap h-full min-w-[85px] w-full"
  >

    <span
      class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
      data-ods="badge"
      style="max-width: -32px;"
    >tag1:tag1
    </span
    >

      <span
        class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
        data-ods="badge"
        style="max-width: -32px;"
      >tag2:tag2
      </span
      >

        <span
          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
          data-ods="badge"
          style="max-width: -32px;"
        >tag3:tag3
        </span
        >

          <span
            class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
            data-ods="badge"
            style="max-width: -32px;"
          >tag4:tag4
          </span
          >
          </div
          >
          </div
          >
`;

exports[`TagsList Component - Snapshot Tests > displays fewer tags along with Link 1`] = `
<div
>

  <div
    class="flex flex-wrap h-full min-w-[85px] w-full"
  >

    <span
      class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
      data-ods="badge"
      style="max-width: -32px;"
    >tag1:tag1
    </span
    >

      <span
        class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
        data-ods="badge"
        style="max-width: -32px;"
      >tag2:tag2
      </span
      >

        <span
          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
          data-ods="badge"
          style="max-width: -32px;"
        >tag3:tag3
        </span
        >

          <a
            class="_link--no-text_HASH_40 _link_HASH_2 text-xs"
            data-ods="link"
            href="#"
          >

            <span
            >​
            </span
            >

              <span
                class="_icon--chevron-double-right_HASH_82 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </a
              >
              </div
              >
              </div
              >
`;

exports[`TagsList Component - Snapshot Tests > displays modal on click of "More tags" link 1`] = `
<body
>

  <div
  >

    <div
      class="flex flex-wrap h-full min-w-[85px] w-full"
    >

      <span
        class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
        data-ods="badge"
        style="max-width: -32px;"
      >tag1:tag1
      </span
      >

        <span
          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
          data-ods="badge"
          style="max-width: -32px;"
        >tag2:tag2
        </span
        >

          <a
            class="_link--no-text_HASH_40 _link_HASH_2 text-xs"
            data-ods="link"
            href="#"
          >

            <span
            >​
            </span
            >

              <span
                class="_icon--chevron-double-right_HASH_82 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </a
              >
              </div
              >
              </div
              >
              </body
              >
`;
